# gemsfits

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  README2.md  azure-pipelines.yml  bitbucket-pipelines.yml  cleanup_libs_linux.sh  conda-install-dependencies.sh  environment.devenv.yml  gemsfits-install-dependencies-Win-msvc.bat  gemsfits-install-dependencies.sh  iowow.patch
.github/workflows/: ci-build.yml  deploy-linux.yml  deploy-macos.yml  deploy-windows.yml
Docs/: DescriptionTests.docx  ldd-lists.txt
Docs/BuildRunLinux/: readme.txt
Docs/BuildRun_win32/: BuildRun_win32.txt  build_NLOPT.txt  build_libraries_win.txt
Docs/DeployLinux/: Deploy-Linux.txt  DeployOnLinuxNew.txt  Readme.Run.Linux.txt  gemsfit2deployqtapp.sh  gfshell2deployQt5.11.0.sh  gfshell2deployQt5.7.sh  gfshell2deployQtsystem5.1.1.sh  gfshell2deployQtsystem5.11.0.sh  gfshell2deployQtsystem5.15.2.sh  gfshell2deployqtapp.sh  rungemsfit2.sh  rungemsfits.sh
Docs/DeployWindows/: Deploy-Windows.txt  Self-extractor-GEMSFITS-06-2019-settings.xml  Self-extractor-GEMSFITS-08-2018-settings.xml  Self-extractor-GEMSFITS-settings.xml  runwindeployqt.bat
Resources/help/: gfshelp.qch  (+1 more)
Tests/: readme.txt  soldata.backup  test.backup
cmake/: gemsfits_version.h.in
common/: common.pri  db_ejdb.cpp  db_ejdb.h  db_ejdb2.cpp  db_ejdb2.h  dbdriver.h  dbtest.pro  dbtest_main.cpp  dbtest_main.cxx  f_database.cpp  f_database.h  f_file.cpp  f_file.h  gemsfits_version.h  jsonparser.cpp  jsonparser.h  keywords.h  type_test.h  v_bson_ejdb.cpp  v_bson_ejdb.h  v_json.cpp  v_json.h  v_json_old.cpp  v_json_old.h  v_yaml.cpp  v_yaml.h
csvtoejdb/: csvtoejdb.pro
docs/: GEMSFIT2_instructions.txt  GEMSFIT_help.doc  GFIT-keywords_.txt  HOWTO-GEMSFIT-config-file.txt  HOW_TO_gemsfit2.txt  HowToBuildGEMSFIT.txt  HowToDevelopGEMSFIT(GUI).html  RDBMS structure.pptx  ToDo.txt  copy_database_to_other_PC-server.txt  create_nacl_actcoeff_table.sql  gemsfit2_build.txt  gemsfit2_features.txt  install_setup_Postgresql.txt  load_NaCl_ambient_from_csv.sql  nacl_298k.csv
gemsfit/: gemsfit.pro  gemsfits.pro
gemsfit2/: CMakeLists.txt  gemsfit2-win.pro  gemsfit2-win32-64.pro  gemsfit2.pro
gemsfit2-build/: Makefile
gemsfit2/docs/html/: gemsfit-about.html  gemsfit-index.html  gemsfit-input-file.html  gemsfit-statistics.html  gemsfit-techinfo.html  gemsfit-useref.html  howto-csvtoejdb.html  howto-ejdb-console.html  howto-gemsfit.html  howto-run-gemsfit.html  index.html
gemsfit2/docs/txt/: ToDo.txt  ToDoSvitlana.txt  task_new_json_example.json
gemsfit2/ejdb2_win32-64/lib/: libejdb2.def  libejdb2.exp  libejdb2.lib
gemsfit2/ejdb2_win32-64/lib/pkgconfig/: libejdb2.pc
gemsfit2/ejdb2_win32-64/share/ejdb2/: ejdb2-exports-release.cmake  ejdb2-exports.cmake  ejdb2-static-exports-release.cmake  ejdb2-static-exports.cmake
gemsfit2/jan_win32/src/: jan.pri
gemsfit2/muparser/samples/example1/: example1
gemsfit2/muparser/src/: muParser.cpp  muParserBase.cpp  muParserBytecode.cpp  muParserDef.h  muparser.pri
gemsfit2/nlopt_win32/: libnlopt-0.lib
gemsfit2/nlopt_win32-64/lib/pkgconfig/: nlopt.pc
gemsfit2/src-fit/: data_manager.cpp  data_manager.h  fit.pri  gemsfit_dynamic_functions.cpp  gemsfit_dynamic_functions.h  gemsfit_global_functions.cpp  gemsfit_global_functions.h  gemsfit_global_variables.h  gemsfit_iofiles.cpp  gemsfit_iofiles.h  gemsfit_nested_functions.cpp  gemsfit_nested_functions.h  gemsfit_target_functions.cpp  gemsfit_target_functions.h  gemsfit_task.cpp  gemsfit_task.h  gemsfit_task2.cpp  json_parse.cpp  json_parse.h  main.cpp  muparserfix.cpp  muparserfix.h  opt_vector.cpp  opt_vector.h  optimization.cpp  optimization.h  print.cpp  print.h  s_formula.cpp  s_formula.h  statistics.cpp  statistics.h
gemsfit2/tcejdb/testejdb/: Makefile
gemsfit2/tcejdb_win32-64/include/ejdb/: basedefs.h
gemsfit2/tcejdb_win32-64/lib/: libejdb.def  libejdb.exp  libejdb.lib
gemsfit2/tcejdb_win32-64/lib/pkgconfig/: libejdb.pc
gemsfit2/tcejdb_win32-64/share/ejdb/: ejdb-exports-release.cmake  ejdb-exports.cmake
gemsfit2/tcejdb_win32/lib/: tcejdbdll.def  tcejdbdll.exp  tcejdbdll.lib
gemsfit2/tcejdb_win32/lib/pkgconfig/: tcejdb.pc
gemsfitgui/: gemsfit-gui.pro
gemsfitgui-build/: stylesheet.qss
gfshell2/: CMakeLists.txt  gem-fits-shell.desktop  gem-fits-shell.rc  gemsfit-gui.pro  gemsfit-win-gui.pro  gemsfit-win32-64-gui.pro
gfshell2-build/: Makefile  gemsfits  gemsfits.ini  gfshell2deployqtapp.sh  qrc_fgui.cpp
gfshell2/QWT/: qwt_graphic.h  qwt_null_paintdevice.cpp  qwt_painter.cpp  qwt_widget_overlay.cpp
gfshell2/YAML/: CMakeLists.txt  yaml.pri
gfshell2/charts/: GraphDialog.cpp  GraphDialog.h  LegendDialog.cpp  LegendDialog.h  SymbolDialog.cpp  SymbolDialog.h  chart_model.cpp  chart_model.h  chart_view.cpp  chart_view.h  charts.pri  from_jsonio.h  graph_data.cpp  graph_data.h  markershapes.cpp  markershapes.h
gfshell2/dataman/: dataman.pri  f_ejdb.cpp  f_ejdb.h  f_ejdb_file.cpp  f_ejdb_file.h  fmodel.cpp  fmodel.h  gemsfit_iobson.cpp  gemsfit_iobson_old.cxx  graph.cpp  graph.h  gui_service.cpp  gui_service.h  help.cpp  help.h  json_model.cpp  json_model.h  json_view.cpp  json_view.h  jsonparser.cpp  jsonparser.h  keywords.h  main.cpp  qwtplot.cpp  v_json.cpp  v_json.h  v_json_old.cpp  v_json_old.h  v_user.cpp  v_user.h  v_yaml.cpp  v_yaml.h
gfshell2/dataman/back/: gemsfit_iobson.cpp
gfshell2/dialogs/: CalcDialog.cpp  CalcDialog.h  CalcDialog4.ui  DBKeyDialog.cpp  DBKeyDialog.h  DBKeyDialog.ui  DialogFindFromPlot.cpp  DialogFindFromPlot.h  DialogFindFromPlot.ui  FITMainMenu.cpp  FITMainWindow.cpp  FITMainWindow.h  FITMainWindow.ui  FitResultsWindow.cpp  FitResultsWindow.h  FitResultsWindow.ui  GraphDialog.cpp  GraphDialog.h  GraphDialog4.ui  HelpWindow.cpp  HelpWindow.h  HelpWindow4.ui  LegendDialog.cpp  LegendDialog.h  ModelLineDialog.cpp  ModelLineDialog.h  ModelLineDialog.ui  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  ProjectSettingsDialog.cpp  ProjectSettingsDialog.h  ProjectSettingsDialog.ui  dialogs.pri
tools/: CMakeLists.txt  README.md  help.cpp  help.h  qhp-generator.cpp
(+772 files in other folders)
